samples/_failures_safe/1761097189_8b31c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8444a08.c: In function ‘main’:
./samples/SAFE/__tmp_a8444a08.c:162:16: error: expected ‘;’ at end of input
  162 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_a8444a08.c:162:9: error: expected declaration or statement at end of input
  162 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_a8444a08.c:162:9: error: expected declaration or statement at end of input
